fix align single sign on notice icon

--- a/css/index.styl
+++ b/css/index.styl
@@ -1184,7 +1184,7 @@ breakpoint(point, value = 0)
   background rgba(0, 0, 0, .03)
   color #6b6c6d
   padding 10px 0
-  margin -30px -30px 30px -30px
+  margin -20px -20px 20px
   text-align center
   font-size 10px
   text-transform uppercase
@@ -1193,6 +1193,9 @@ breakpoint(point, value = 0)
   .auth0-lock-icon
     width 12px
     height 14px
+    position relative
+    top 2px
+    right 2px
 
 // last login TODO: review by design
 
